apps/website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: website
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 8080
