apps/website/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: website
  annotations:
    external-dns.alpha.kubernetes.io/hostname: workshop.dacoso.de
    external-dns.alpha.kubernetes.io/ttl: "60"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - workshop.dacoso.de
      secretName: website-tls
  rules:
    - host: workshop.dacoso.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
